--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
 spring.datasource.url = jdbc:postgresql://localhost:5432/veiculo
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = admin
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.validationQuery = SELECT 1
 
